<resources>
    <string name="app_name">PaywallPanel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Giriş Yap</string>
    <string name="password">Parola</string>
    <string name="email">E-Posta Adresi</string>
    <string name="forgot_password">Parolanı mı Unuttun?</string>
    <string name="title_activity_main_drawer">MainDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Kullanıcı adı</string>
    <string name="main_page">Ana Sayfa</string>
    <string name="transfers_page">Transferler</string>
    <string name="gateways_page">Ödeme Sağlayıcıları</string>
    <string name="test_tool_page">Test Aracı</string>
    <string name="settings_page">Ayarlar</string>
    <string name="cancel">İptal Et</string>
    <string name="okay">Tamam</string>
    <string name="error_code_1">İşlem Başarısız</string>
    <string name="welcome">Hoş Geldin</string>
    <string name="register">Paywall üyesi ol</string>
    <string name="hi">Merhaba,</string>
    <string name="last_transactions">Son İşlemler</string>
    <string name="connect">Bağlan</string>
    <string name="what_is_the_testtool">Test Aracı nedir?</string>
    <string name="testtool_exp">Test Aracı, ödemeyi gerçekleştirmeden önce size ödemenin nasıl gerçekleşeceğini; hangi kanallardan geçeceğini söyler.</string>
    <string name="connected">Bağlandı</string>
    <string name="test_it">Test Et</string>
    <string name="card_owner">Kart Sahibi</string>
    <string name="card_number">Kart Numarası</string>
    <string name="last_usage">Son Kullanım Tarihi</string>
    <string name="amount">Tutar</string>
    <string name="success">Başarılı!</string>
    <string name="process_success">İşlem başarıyla sonuçlandı</string>
    <string name="user_verification">Kullanıcı \nDoğrulama</string>
    <string name="verification_code">Doğrulama Kodu</string>
    <string name="profile">Profil</string>
    <string name="change_password">Parola Değiştir</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="e_mail">E-Posta Adresi</string>
    <string name="last_attempts">Son giriş denemeleri</string>
    <string name="old_password">Eski Parola</string>
    <string name="new_password">Yeni Parola</string>
    <string name="renew_password">Yeni Parola (Tekrar)</string>
    <string name="change">Değiştir</string>
    <string name="manager_name">Yönetici Adı</string>
    <string name="manager_e_mail">Yönetici E-Posta Adresi</string>
    <string name="manager_phone_number">Yönetici Telefon Numarası</string>
    <string name="unsuccess">Başarısız!</string>
    <string name="info">Bilgi!</string>
    <string name="question">Soru!</string>
    <string name="warning">Uyarı!</string>
    <string name="logout">Çıkış Yap</string>
    <string name="logout_question">Çıkış yapmak istiyor musunuz?</string>
    <string name="unauthorized">Hatalı giriş</string>
    <string name="change_password_success">Parola başarıyla değiştirildi</string>
    <string name="verify">Doğrula</string>
    <string name="email_header">E-Posta \nAdresi</string>
    <string name="transfer_detail">Transfer Detayı</string>
    <string name="installment_count">Taksit Sayısı</string>
    <string name="payment_method">Ödeme Yöntemi</string>
    <string name="payment_date">Ödeme Tarihi</string>
    <string name="payment_amount">Ödeme Tutarı</string>
    <string name="payment_status">Ödeme Durumu</string>
    <string name="process_steps">İşlem Adımları</string>
    <string name="chosen_providers">Seçilen Sağlayıcılar</string>
    <string name="show_detail">Detaylar</string>
    <string name="provider_comminication">Sağlayıcı Haberleşmesi</string>
    <string name="request">İstek</string>
    <string name="response">Cevap</string>
    <string name="card_storage">Kart Kaydetme</string>
    <string name="threed_payment">3D Ödeme</string>
    <string name="direct_payment">Direkt Ödeme</string>
    <string name="commission_information">Komisyon Bilgisi</string>
    <string name="active">Aktif</string>
    <string name="inactive">Pasif</string>
    <string name="go_website_to_connection">Ödeme sağlayıcı aktif etme işlemleri sadece web uygulamamız üzerinden yapılabilmektedir</string>
</resources>