<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bottomsheet_top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_header"
            style="@style/TextViewHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:rotation="90"
                android:src="@drawable/ic_round_keyboard_arrow_right_24"
                app:tint="@color/white" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_top"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/old_password"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_old_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:translationZ="1dp" />

        <TextView
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/new_password"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_new_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:translationZ="1dp" />

        <TextView
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/renew_password"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_renew_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:translationZ="1dp" />

        <Button
            android:id="@+id/btn_change_password_bs"
            style="@style/ButtonStyleTwo"
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:text="@string/change"
            android:translationZ="3dp"
            android:layout_marginEnd="5dp"
            app:layout_constrainedWidth="true"
            android:layout_marginVertical="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>