<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".ui.main.drawer.testtool.TestToolFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="800dp"
        android:layout_height="800dp"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="-530dp"
        android:background="@drawable/blue_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header"
        style="@style/TextViewHeaderStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/what_is_the_testtool"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_body"
        style="@style/TextViewBodyStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/testtool_exp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11.5sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_body"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="25dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hint_username"
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/card_owner"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_card_owner"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="Kullanıcı Adı"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle"
            android:translationZ="1dp"/>

        <TextView
            android:id="@+id/tv_hint_password"
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/card_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            style="@style/EditTextStyle"
            android:layout_marginHorizontal="5dp"
            android:inputType="number"
            android:translationZ="1dp"/>

        <TextView
            android:id="@+id/tv_hint_last_usage"
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/last_usage"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_last_usage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            style="@style/EditTextStyle"
            android:layout_marginHorizontal="5dp"
            android:inputType="number"
            android:translationZ="1dp"/>

        <TextView
            android:id="@+id/tv_hint_amount"
            style="@style/TextViewHintStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/amount"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            style="@style/EditTextStyle"
            android:layout_marginHorizontal="5dp"
            android:inputType="number"
            android:translationZ="1dp"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonStyleTwo"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="@string/test_it"
            android:translationZ="3dp"
            android:layout_marginTop="30dp"
            app:layout_constrainedWidth="true"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>