<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TestFragment">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:background="@color/transparent"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_ill"
            android:translationZ="1dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        android:weightSum="10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.6"
            android:background="@drawable/rectangle_bottom_left_rd">

            <TextView
                android:id="@+id/tv_header_welcome"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/welcome"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/login_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.7"
            android:background="@drawable/top_bot_right_rd_layer_list">

            <TextView
                android:id="@+id/tv_header_login"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constrainedHeight="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_login"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="30dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_hint_username"
                    style="@style/TextViewHintStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/username"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginVertical="10dp"
                    android:autofillHints="Kullanıcı Adı"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextStyle"
                    android:translationZ="1dp"/>

                <TextView
                    android:id="@+id/tv_hint_password"
                    style="@style/TextViewHintStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/password"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    style="@style/EditTextStyle"
                    android:translationZ="1dp"/>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/ButtonStyleTwo"
                    android:layout_width="220dp"
                    android:layout_height="42dp"
                    android:text="@string/login"
                    android:translationZ="3dp"
                    app:layout_constrainedWidth="true"
                    android:layout_gravity="end"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@drawable/rectangle_top_right_rd">

        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>